--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,24 @@ project(turtlebot3_control)
 find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
   rospy
+  std_msgs
+  message_generation
+)
+
+add_message_files(
+  FILES
+  UdpClientData.msg
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
 )
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES turtlebot3_control
-#  CATKIN_DEPENDS gazebo_ros rospy
+  CATKIN_DEPENDS gazebo_ros rospy message_runtime
 #  DEPENDS system_lib
 )
 
@@ -20,4 +32,6 @@ include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
 )
+
+
 
